<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/viewEscolhaDoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/escolha_do_app"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageApp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEscolhaDoApp"
        app:srcCompat="@drawable/padrao"
        android:contentDescription="Imagem com a escolha do app ao jogar contra você" />

    <Button
        android:id="@+id/btnPedra"
        android:layout_width="109dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:text="@string/pedra"
        app:icon="@drawable/pedra"
        app:iconGravity="top"
        app:iconSize="100dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnPapel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEscolhaDoUsuario" />

    <Button
        android:id="@+id/btnPapel"
        android:layout_width="109dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/papel"
        app:icon="@drawable/papel"
        app:iconGravity="top"
        app:iconSize="100dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnTesoura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPedra"
        app:layout_constraintTop_toBottomOf="@+id/viewEscolhaDoUsuario" />

    <Button
        android:id="@+id/btnTesoura"
        android:layout_width="109dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/tesoura"
        app:icon="@drawable/tesoura"
        app:iconGravity="top"
        app:iconSize="100dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPapel"
        app:layout_constraintTop_toBottomOf="@+id/viewEscolhaDoUsuario" />

    <TextView
        android:id="@+id/viewEscolhaDoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/escolha_uma_op_o_abaixo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageApp" />

    <TextView
        android:id="@+id/viewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPapel" />
</androidx.constraintlayout.widget.ConstraintLayout>